<resources>
    <string name="app_name">DamMobileApp</string>
    <string name="state">state</string>
    <string name="level">Level</string>
    <string name="opening">Opening</string>
    <string name="manual">manual</string>
    <string name="_20">20%</string>
    <string name="_40">40%</string>
    <string name="_60">60%</string>
    <string name="_80">80%</string>
    <string name="_100">100%</string>
    <string name="connect_to_bt">Connect to BT</string>
</resources>