<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/state"
        android:layout_width="408dp"
        android:layout_height="62dp"
        android:text="@string/state"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:text="@string/level"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/level"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/openingLabel"
        android:layout_width="137dp"
        android:layout_height="49dp"
        android:text="@string/opening"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/opening"
        android:layout_width="136dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/modeButton"
        android:layout_width="345dp"
        android:layout_height="66dp"
        android:enabled="false"
        android:text="@string/manual"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="345dp"
        android:layout_height="259dp"
        android:checkedButton="@+id/button20"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929">


        <RadioButton
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20" />

        <RadioButton
            android:id="@+id/button40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_40" />

        <RadioButton
            android:id="@+id/button60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_60" />

        <RadioButton
            android:id="@+id/button80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_80" />

        <RadioButton
            android:id="@+id/button100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100" />

    </RadioGroup>

    <!-- <Button
         android:id="@+id/button20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_20"
         android:textSize="24sp"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.726" />

     <Button
         android:id="@+id/button40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_40"
         android:textSize="24sp"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.736"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.726" />

     <Button
         android:id="@+id/button80"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_80"
         android:textSize="24sp"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.736"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.844" />

     <Button
         android:id="@+id/button60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_60"
         android:textSize="24sp"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.231"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.844" />

     <Button
         android:id="@+id/button100"
         android:layout_width="127dp"
         android:layout_height="50dp"
         android:text="@string/_100"
         android:textSize="24sp"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.955" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>